edit some fonts and fix some styles and bugs

--- a/Front/pill-spot/src/App.css
+++ b/Front/pill-spot/src/App.css
@@ -1,4 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+US+Modern:wght@100..400&display=swap");
 @import "tailwindcss";
+
 @plugin "daisyui" {
-    themes: light --default;
-  }
+  themes: light --default;
+}
+
+@theme {
+  --font-roboto: "Roboto", sans-serif;
+  --font-logo: "Playwrite US Modern", sans-serif; 
+}
